@@ -1,3 +1,8 @@
+2005-12-12 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: don't use wait_for_node() if resizing an
+	  extended partition (they don't have nodes :P)
+
 2005-12-11 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* po/POTFILES.in: added include/Utils.h
